--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p class="role"> A Poetry for my Significant other</p>
 
       <nav class="links">
-        <a href="file:///C:/my%20journal/my%20first%20journal/Poems/index.html" class="btn">Poems</a>
+        <a href="https://irolami.github.io/Spacelori1/">Poems</a>
         <a href="file:///C:/my%20journal/my%20first%20journal/About%20me/index.html" class="btn">About me </a>
         <a href="#" class="btn">Socials</a>
       </nav>    
@@ -31,4 +31,5 @@
 
   <script src="./script.js"></script>
 </body>
+
 </html>
