--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p class="role"> A Poetry for my Significant other</p>
 
       <nav class="links">
-        <a href="https://irolami.github.io/Spacelori1/" class="btn">Poems</a>
+        <a href="https://irolami.github.io/Poems/">Poems</a>
         <a href="https://irolami.github.io/About/" class="btn">About me </a>
         <a href="#" class="btn">Socials</a>
       </nav>    
@@ -32,4 +32,5 @@
   <script src="./script.js"></script>
 </body>
 </html>
+
 
