--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <p class="role"> A Poetry for my Significant other</p>
 
       <nav class="links">
-        <a href="https://irolami.github.io/Poetry/">Poems</a>
-        <a href="https://irolami.github.io/About/"class="btn">About me </a>
+        <a href="https://irolami.github.io/Poetry/" class="btn">Poems</a>
+        <a href="file:///C:/my%20journal/my%20first%20journal/About%20me/index.html" class="btn">About me </a>
         <a href="#" class="btn">Socials</a>
       </nav>    
 
@@ -32,8 +32,3 @@
   <script src="./script.js"></script>
 </body>
 </html>
-
-
-
-
-
