--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <nav class="links">
         <a href="https://irolami.github.io/Poetry/" class="btn">Poems</a>
-        <a href="file:///C:/my%20journal/my%20first%20journal/About%20me/index.html" class="btn">About me </a>
+        <a href="https://irolami.github.io/About/" class="btn">About me </a>
         <a href="#" class="btn">Socials</a>
       </nav>    
 
