--- a/index.html
+++ b/index.html
@@ -2,7 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <!-- ✅ Cross-platform viewport and scaling -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+  <!-- ✅ Better rendering and color handling -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="mobile-web-app-capable" content="yes" />
+
+  <!-- ✅ iOS and Android icons -->
+  <link rel="apple-touch-icon" href="https://i.pinimg.com/736x/09/d1/3e/09d13e8ed8f228d12fed0818d42bae8f.jpg" />
+  <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/09/d1/3e/09d13e8ed8f228d12fed0818d42bae8f.jpg" />
+
   <title>Malori's Journal</title>
   <link rel="stylesheet" href="./styles.css" />
 </head>
@@ -22,14 +36,11 @@
       <nav class="links">
         <a href="https://irolami.github.io/Poetry/" class="btn">Poems</a>
         <a href="https://irolami.github.io/About/" class="btn">About me </a>
-        <a href="https://irolami.github.io/Duck/" class="btn">For my little Six</a>
+        <a href="#" class="btn">For my little Six</a>
       </nav>    
-
-    
     </main>
   </div>
 
   <script src="./script.js"></script>
 </body>
 </html>
-
