--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <nav class="links">
         <a href="https://irolami.github.io/Poetry/" class="btn">Poems</a>
         <a href="https://irolami.github.io/About/" class="btn">About me </a>
-        <a href="#" class="btn">For my little Six</a>
+        <a href="https://irolami.github.io/Duck/" class="btn">For my little Six</a>
       </nav>    
     </main>
   </div>
@@ -44,3 +44,4 @@
   <script src="./script.js"></script>
 </body>
 </html>
+
